:speech_balloon: fix typo in offline page
fix typo with -> wish

--- a/src/Setup/cms/offline.html
+++ b/src/Setup/cms/offline.html
@@ -1,2 +1,2 @@
 <p>It appears you don't currently have a network connection. However, you can still view pages that you have visited before and continue browsing the catalog as it was when you last saw it. Keep in mind that prices and offers may be out of date - we will show you the updated catalog once you are back online.</p>
-<p>Some actions such as managing your user account, adding products to your basket and checking out are unavailable while offline. If you with to place an order, please try again once your network connection is restored.</p>
+<p>Some actions such as managing your user account, adding products to your basket and checking out are unavailable while offline. If you wish to place an order, please try again once your network connection is restored.</p>
